<resources>
    <string name="app_name">CodeNomic</string>
    <string name="menuHome">Home</string>
    <string name="menuApproval">Approval</string>
    <string name="attendance">Attendance</string>
    <string name="cash_advance">Cash Advance</string>
    <string name="menuReport">Report</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="storage_permission_rationale_title">Storage permission required</string>
    <string name="storage_permition_rationale_message">In order to take a picture, you must grant this permission!</string>
    <string name="storage_permission_denied_message">Storage permission is required in order to take a photo with the camera</string>
    <string name="camera_request_rational">Camera app requires camera access</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="home">HOME</string>
    <string name="attend">Attendance</string>
    <string name="cashAdvance">Cash Advance</string>
    <string name="reimburse">Reimbursement</string>
    <string name="report">Report</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
