<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menuHome"/>
        <item android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendance"
            android:title="@string/attendance"/>
        <item android:id="@+id/nav_cash_advance"
            android:icon="@drawable/ic_cash_advance"
            android:title="@string/cash_advance"/>
        <item android:id="@+id/nav_reimbursement"
            android:icon="@drawable/ic_reimburse"
            android:title="Reimbursement"/>
        <item android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/menuReport"/>
    </group>
    <item android:title="">
        <menu>
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out"/>
        </menu>
    </item>
</menu>
